@@ -841,7 +841,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x25CF;</property>
-                    <property name="adjustment">1 1 100 1 0 0</property>
+                    <property name="adjustment">0 0 100 1 0 0</property>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
